# idp-dashboard-v2

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py  settings.py
app/config/: __init__.py  widgets.py
app/data/: monthly_metrics.json  source_distribution.json  tickets.json
app/domain/: __init__.py  enums.py  models.py
app/routes/: __init__.py  pages.py
app/services/: __init__.py  chart_payloads.py  data_loader.py  filter_engine.py
app/static/css/: dashboard.css
app/static/js/: dashboard.js
app/templates/: dashboard.html
app/templates/components/: widget_card.html
idp_dashboard_v2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
requirements/: Product-dashboard-architecture.md  Product-dashboard-design.md  Product-dashboard.md
tests/: test_data_loader.py  test_filter_engine.py  test_pages.py
