[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idp-dashboard-v2"
version = "0.1.0"
description = "Local MVP product dashboard for the RAG platform."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.4",
    "pydantic>=2.11.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
